[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-utilities-filetransfer"
version = "0.1.dev0"
description = "A python client for the ansys filetransfer utility"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/pyansys/ansys-utilities-filetransfer"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
importlib-metadata = {version = "^4.0", python = "<3.8"}
pytest = {version = ">=7.1.0", optional = true}
pytest-cov = {version = ">=3.0.0", optional = true}
Sphinx = {version = ">=4.4", optional = true}
numpydoc = {version = ">=1.2", optional = true}
pyansys-sphinx-theme = {version = ">=0.2", optional = true}
sphinx-copybutton = {version = ">=0.4", optional = true}
build = {version = ">=0.7.0", optional = true}
twine = {version = ">=3.8", optional = true}
tox = {version = "^3.25.0", optional = true}
pre-commit = {version = "^2.19.0", optional = true}

[tool.poetry.extras]
tests = ["pytest", "pytest-cov", "tox"]
doc = ["Sphinx", "numpydoc", "pyansys_sphinx_theme", "Sphinx-copybutton"]
build = ["build", "twine"]
style = ["pre-commit"]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.utilities"]

[tool.coverage.report]
show_missing = true
