[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-tools-filetransfer"
version = "0.1.dev0"
description = "A python client for the ansys filetransfer utility"
license = "MIT"
authors = ["ANSYS, Inc. <ansys.support@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.maintainers@ansys.com>"]
readme = "README.rst"
repository = "https://github.com/ansys-internal/ansys-tools-filetransfer"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
grpcio = "^1.17"
ansys-api-tools-filetransfer = { version="^0.1.dev0", source = "pyansys_private_pypi" }

pytest = {version = ">=7.1.0", optional = true}
pytest-cov = {version = ">=3.0.0", optional = true}
Sphinx = {version = "^5.0", optional = true}
numpydoc = {version = "^1.3", optional = true}
ansys-sphinx-theme = {version = "^0", optional = true}
sphinx-copybutton = {version = "^0.5", optional = true}
build = {version = ">=0.7.0", optional = true}
twine = {version = ">=3.8", optional = true}
tox = {version = "^4", optional = true}
pre-commit = {version = "^2.19.0", optional = true}
mypy = {version = "^0.950", optional = true}
grpcio-health-checking = {version = "^1.47.0", optional = true}

[tool.poetry.extras]
tests = ["pytest", "pytest-cov", "tox", "grpcio-health-checking"]
doc = ["Sphinx", "numpydoc", "ansys_sphinx_theme", "Sphinx-copybutton"]
build = ["build", "twine"]
style = ["pre-commit", "mypy", "pytest"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pyansys_private_pypi"
url = "https://pkgs.dev.azure.com/pyansys/_packaging/pyansys/pypi/simple"
priority = "explicit"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]
known_first_party = ["ansys"]

[tool.coverage.run]
source = ["ansys.tools.filetransfer"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = 3.9
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"

[[tool.mypy.overrides]]
module = [
    "grpc.*",
    "grpc_health.*",
]
ignore_missing_imports = true
